<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".ActivityPhotoPartageKitchen">

    <ImageView
        android:id="@+id/retourAccueil6"
        android:layout_width="69dp"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retouraccueil" />

    <Button
        android:id="@+id/btnPartager"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bree_serif"
        android:text="Partager"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnValider" />

    <Button
        android:id="@+id/btnValider"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/bree_serif"
        android:onClick="onClickBtnValider"
        android:text="Valider"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

    <TextView
        android:id="@+id/textViewFelicitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/f_licitation"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreThemeKitchenFinal" />

    <TextView
        android:id="@+id/titreThemeKitchenFinal"
        android:layout_width="332dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bree_serif"
        android:gravity="center_horizontal"
        android:text="@string/cuisine"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreFinalLogos"
        android:layout_width="347dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bree_serif"
        android:gravity="center_horizontal"
        android:text="@string/votre_score_est"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFelicitation" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAjoutPhoto" />

    <ImageView
        android:id="@+id/imgAjoutPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:onClick="onClickImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreFinalLogos"
        app:srcCompat="@drawable/ajouterphoto" />

</androidx.constraintlayout.widget.ConstraintLayout>